# hackathon

./: .gitignore  Dockerfile  README.md  __init__.py  alerts.py  baseline.py  client.py  graders.py  gradio_ui.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  __init__.py  app.py  requirements.txt  soc_alert_env_environment.py
